adding css and stuffs

--- a/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
@@ -28,8 +28,8 @@
             
 
         <div class="buttons">
-                <button id="butt-nope">X</button>
-                <button id="butt-yes">Y</button>
+                <button type="button" class="btn" id="butt-nope"><i class="fa fa-ban" aria-hidden="true"></i></button>
+                <button type="button" class="btn" id="butt-yes"><i class="fa fa-heart LargeCircleIcon"></i></button>
         </div>
     </div>
 </div>
