--- a/MealPreppers/MealPreppers/Content/CustomCss/Discover/Middle/FoodFinder.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Discover/Middle/FoodFinder.css
@@ -67,20 +67,24 @@ img{
 }
 #butt-yes {
     float: right;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    font-size: 25px;
+    text-align: center;
 }
 #butt-nope{
     float:left;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     color:red;
+    font-size:25px;
+    text-align:center;
 }
