Changed the way it looks when users are adding ingredients and instructions, let me know what you think

--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
@@ -159,5 +159,13 @@ textarea {
 }
 
 #firstIngInput{
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+}
+
+#addIngredientButton{
+    
+}
+
+#ingredientsContainer {
+    
 }
