--- a/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
@@ -1,35 +1,40 @@
 ﻿@Styles.Render(("~/Content/CustomCss/Discover/Middle/FoodFinder.css"))
-
+@model List<MealPreppers.Models.RecipeItem>
 
 
 <div id="DiscoverMiddle">
     <div id="discoverHeader">
         <h2>Food Finder</h2>
         <h3>Find your new favorite recipes to cook and share with friends!</h3>
+        
+        
     </div>
 
     <div id="discoverFoodContainer">
         <div class="header">
             <h4>Click on the checkmark or X to find new recipes that may interest you!</h4>
         </div>
-
+        
+        
+        @for (int i = 0; i < Model.Count; i++)
+        {
 
         <div class="foodCards">
             <div id="foodName">
-                Recipe: Ice Cream is so very good.
+                <p>@Model[i].title</p>
             </div>
             <div id="CookTime">
-                Cooking Time: 30 minutes
+                <p>@Model[i].prepTime</p>
             </div>
         </div>
-            <div class="photo">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg/1200px-Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg"/>
-            </div>
-            
+        <div class="photo">
+            <img src="@Model[i].imageURL" />
+        </div>
+        }
 
         <div class="buttons">
-                <button type="button" class="btn" id="butt-nope"><i class="fa fa-ban" aria-hidden="true"></i></button>
-                <button type="button" class="btn" id="butt-yes"><i class="fa fa-heart LargeCircleIcon"></i></button>
+            <button type="button" class="btn" id="butt-nope"><i class="fa fa-ban" aria-hidden="true"></i></button>
+            <button type="button" class="btn" id="butt-yes"><i class="fa fa-heart LargeCircleIcon"></i></button>
         </div>
     </div>
 </div>
