--- a/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
@@ -3,14 +3,21 @@
 
 <div id="RightSection" class="SectionBackground">
     <div id="DetailsImageContainer">
-        <img class="image" src="https://www.tripsavvy.com/thmb/LHqlrmfFjjA0iLUw2d2qrjlqu_o=/2121x1414/filters:fill(auto,1)/GettyImages-508469850-5c32728e4cedfd0001716190.jpg" />
+        <img class="image" id="mealRightSideImage" src="https://www.tripsavvy.com/thmb/LHqlrmfFjjA0iLUw2d2qrjlqu_o=/2121x1414/filters:fill(auto,1)/GettyImages-508469850-5c32728e4cedfd0001716190.jpg" />
     </div>
 
     <div id="DetailsContentContainer">
         <div id="RightTitleContainer">
-            <h3 class="HeaderThirdFontColor">Assorted  Sushi</h3>
+            <h3 class="HeaderThirdFontColor" id="RightSideTitle">Assorted  Sushi</h3>
             <p id="RightSideDetailsTXT">Sushi, a staple rice dish of Japanese cuisine, consisting of cooked rice flavoured with vinegar and a variety of vegetable, egg, or raw seafood garnishes and served cold.</p>
         </div>
+    </div>
+    <div>
+        <h3 class="HeaderThirdFontColor">Additional Information</h3>
+        <div>Total Calories: <h5 style="display: inline" id="RightCalories"> 69</h5> Calories</div>
+        <div>Servings: <h5 style="display: inline" id="RightServingSize"> 69</h5> Servings</div>
+        <div>Prep Time: <h5 style="display: inline" id="RightPrepTime"> 69</h5> Minutes</div>
+        
     </div>
 
     <div id="IngredientsContentContainer">
@@ -29,7 +36,7 @@
 
     <div id="HowToContentContainer">
         <h3 class="HeaderThirdFontColor">How to</h3>
-        <ol>
+        <ol id="InstructionList">
             <li>Place the seaweed on a bamboo mat, then cover the sheet of seaweed with an even layer of prepared sushi rice. Smooth gently with the rice paddle.</li>
             <li>Layer salmon, cream cheese, and avocado on the rice, and roll it up tightly. Slice with a sharp knife, and enjoy with soy sauce.</li>
             <li> Add your ingredients toward the center of the rice-covered nori. Don't overpack it. If you're making a roll with the rice on the outside, simply turn the nori over, placing it rice-side down on the rolling mat. Then add your ingredients to the top of the nori.</li>
@@ -43,3 +50,4 @@
 
 </div>
 
+<script src="~/Scripts/Get Recipe Details for Right Side.js" type="module"></script>
